k8s/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    traffic-type: external
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.example.me
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
  tls:
  - secretName: traefik-cert
